# ClinicMP

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Clinical_Impression.c  INPUT.txt  Impressions.txt  README.md  Symptoms.txt  displayAndMenus.c  fileProcessing.c  main.c  patientProcessing.c  symptomsImpressions.c
.cache/clangd/index/: displayAndMenus.c.69076FA7410AE196.idx  fileProcessing.c.20B8D71A04A07D99.idx  main.c.B4605B53E04D96BB.idx  patientProcessing.c.6E70332526458634.idx  symptomsImpressions.c.8DD8FF9556477438.idx
Test Cases/: INPUT.txt  README.md
include/: clinic.h
src/: main.c  patientProcessing.c
test/: INPUTDATA.txt
